# tick

./: .env.example  .gitignore  Cargo.toml  README.md
src/: auth.rs  client.rs  config.rs  display.rs  main.rs  types.rs
